package it.unibo.model.effect.core

trait IGameEffect

trait IGameChoiceEffect extends IGameEffect
